ingresses.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.progamesigner.io/hostname: adguard
    nginx.org/ssl-services: adguard-home
  name: adguard-home
spec:
  ingressClassName: internal-ingress
  rules:
  - host: adguard.progamesigner.dev
    http:
      paths:
      - backend:
          service:
            name: adguard-home
            port:
              name: https
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - adguard.progamesigner.dev
    secretName: tls-dev-progamesigner
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.progamesigner.io/hostname: home
    nginx.org/websocket-services: home-assistant
  name: home-assistant
spec:
  ingressClassName: internal-ingress
  rules:
  - host: home.progamesigner.dev
    http:
      paths:
      - backend:
          service:
            name: home-assistant
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - home.progamesigner.dev
    secretName: tls-dev-progamesigner
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.progamesigner.io/hostname: minio
    nginx.org/websocket-services: minio
  name: minio
spec:
  ingressClassName: internal-ingress
  rules:
  - host: minio.progamesigner.dev
    http:
      paths:
      - backend:
          service:
            name: minio
            port:
              name: minio-console
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - minio.progamesigner.dev
    secretName: tls-dev-progamesigner
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.progamesigner.io/hostname: auto
    nginx.org/websocket-services: node-red
  name: node-red
spec:
  ingressClassName: internal-ingress
  rules:
  - host: auto.progamesigner.dev
    http:
      paths:
      - backend:
          service:
            name: node-red
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - auto.progamesigner.dev
    secretName: tls-dev-progamesigner
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.progamesigner.io/hostname: postgresql
    nginx.org/client-max-body-size: 2G
    nginx.org/proxy-read-timeout: 3600s
    nginx.org/proxy-send-timeout: 3600s
  name: pgadmin
spec:
  ingressClassName: internal-ingress
  rules:
  - host: postgresql.progamesigner.dev
    http:
      paths:
      - backend:
          service:
            name: pgadmin
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - postgresql.progamesigner.dev
    secretName: tls-dev-progamesigner
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.progamesigner.io/hostname: mariadb,mysql
    nginx.org/client-max-body-size: 2G
    nginx.org/proxy-read-timeout: 3600s
    nginx.org/proxy-send-timeout: 3600s
  name: phpmyadmin
spec:
  ingressClassName: internal-ingress
  rules:
  - host: mariadb.progamesigner.dev
    http:
      paths:
      - backend:
          service:
            name: phpmyadmin
            port:
              name: http
        path: /
        pathType: Prefix
  - host: mysql.progamesigner.dev
    http:
      paths:
      - backend:
          service:
            name: phpmyadmin
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - mariadb.progamesigner.dev
    - mysql.progamesigner.dev
    secretName: tls-dev-progamesigner
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.progamesigner.io/hostname: syncthing
    nginx.org/ssl-services: syncthing
  name: syncthing
spec:
  ingressClassName: internal-ingress
  rules:
  - host: syncthing.progamesigner.dev
    http:
      paths:
      - backend:
          service:
            name: syncthing
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - syncthing.progamesigner.dev
    secretName: tls-dev-progamesigner
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.progamesigner.io/hostname: unifi
    nginx.org/ssl-services: unifi-controller
  name: unifi-controller
spec:
  ingressClassName: internal-ingress
  rules:
  - host: unifi.progamesigner.dev
    http:
      paths:
      - backend:
          service:
            name: unifi-controller
            port:
              name: https
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - unifi.progamesigner.dev
    secretName: tls-dev-progamesigner
